fixed width flicker with all collapsed cards and sections

--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,7 @@ label{
 }
 
 .resume-inputs-container{
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
